adjust CI behavior