@@ -35,15 +35,9 @@ allprojects {
         implementation("org.graalvm.truffle:truffle-api:$graalvmVersion")
         implementation("org.graalvm.sdk:graal-sdk:$graalvmVersion")
         implementation("commons-codec:commons-codec:1.15")
+        testImplementation("org.graalvm.truffle:truffle-api:$graalvmVersion")
         annotationProcessor("org.graalvm.truffle:truffle-dsl-processor:$graalvmVersion")
 
         testImplementation("org.junit.jupiter:junit-jupiter:5.7.0")
     }
-
-    tasks.withType<JavaCompile> {
-        options.compilerArgs = listOf("--add-exports", "org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED")
-        options.isFork = true // required for above?
-        options.forkOptions.executable = "javac" // required for above?
-    }
-
 }
